# delin_ocr

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  todo.md  tsconfig.json  tsconfig.node.json  version.json  vite.config.ts
.github/workflows/: README.md  android-build.yml  android-release.yml  build-release.yml  changelog.yml  linux-build.yml  publish.yml  release.yml  test.yml  windows-build.yml
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/spiders/: idream.rs  mod.rs
src/assets/css/: global.css
src/components/: fileList.vue  leavePopup.vue
src/components/global/: LoadingDialog.vue  Snackbar.vue  loadingDialogService.ts  snackbar.vue  snackbarService.ts  updatePopup.vue  updatePopupService.ts  updateService.ts
src/layouts/: NextLayout.vue
src/locales/: zh.json
src/plugins/: i18n.ts  vuetify.ts
src/router/: index.ts
src/utils/: dbService.ts  fileService.ts  fileSystem.ts  ocrService.ts  settingService.ts  tagService.ts  thumbService.ts  thumbnail.ts  thumbnailService.ts
src/views/: about.vue  main copy.vue  main.vue  recent_files.vue  setting.vue  test.vue  workerTest.vue
src/views/main/: certificate.vue  file.vue  file_next.vue  home.vue  user.vue
src/views/ocr/: camera.vue  camera_old.vue  editor.vue  select.vue
src/views/online/: index.vue
src/views/test/: db.vue  index.vue  ocr-worker.vue  path.vue  tag-service.vue  (+1 more)
src/worker/: ocr-worker.ts  ocrAndSort.ts  test.ts
(+13 files in other folders)
